[package]
name = "trust"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3"
parking_lot = "0.11.1"
rand = "0.8.3"
uuid = {version ="0.8.2", features=["v4"]}
