[package]
name = "trust"
version = "0.1.0"
authors = ["Tochukwu Nkemdilim <nkemdilimtochukwu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.0"
actix-web = "4.0.0-beta.6"
bytes = "1.0.1"
futures = "0.3.15"
parking_lot = "0.11.1"
tokio = {version="1.6.1", features=["full", "net", "io-util"]}
tokio-util = "0.6.7"
uuid = {version ="0.8.2", features=["v4"]}
structopt = "0.3"
